--- a/banner.partial.dog-about-us.html
+++ b/banner.partial.dog-about-us.html
@@ -4,12 +4,12 @@
         <p class="banner__paragraph">-Hello, We're Healthy Pet</p>
         <h2 class="banner__secondblock--heading">We take care of<br>Your Pets as if They<br>Where Our Own.</h2>
         <p class="banner__secondblock--secondparagraph">Welcome to our veterinary clinic in<br> New York. We will make sure that your<br> pet is always healthy and cheerful.</p>  
-        <button class="button__banner--pagedown" type="button__banner--pagedown">
+        <button id="btn-1" class="button__banner--pagedown" type="button__banner--pagedown">
             Make Appointment >
         </button>
-        <button class="button__banner--tel" type="button__banner--tel">
+        <a href="#" class="button__banner--tel" type="button__banner--tel">
             +1 (234) 567 89 00
-        </button>
+        </a>
         </div>
     </div>
 </section>
