--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -16,7 +16,7 @@
           allergic reaction. </p>
         <span style="font-weight:bold">Read More ➞</span>
       </li>
-      <li class="carousel__slide surgeries&dental care">
+      <li class="carousel__slide surgeries&dental">
         <img src="img/surgeries dental care.jpg" alt="surgeries dental care" class="carousel__image">
         <h3>Surgeries & Dental Care</h3>
         <p>Our surgeons and dentists will perform all the necessary procedures and interventions to restore the health
