Add button for scroll top

--- a/footer.partial.html
+++ b/footer.partial.html
@@ -1,4 +1,8 @@
 <footer class="footer">
+  <div class='btn-scroll-up'>
+        <span>&#9650;</span>
+        <span>UP</span>
+  </div>
   <div class="footer__wrap-img">
     <img src="img/footer-bg.png" alt="Footer background">
   </div>
