Fix path for index.js

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section data-include="index.contacts.partial.html"></section>
     </main>
     <footer data-include="footer.partial.html"></footer>
-    <script src="./js/main.js"></script>
+    <script src="js/index.js"></script>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
