add under carousel circles

--- a/index.pricing.partial.html
+++ b/index.pricing.partial.html
@@ -38,8 +38,8 @@
           </ul>
           <div class="pricing__select-button">
             <a href="#" class="pricing__select-plan"
-              ><span class="pricing__select-bn-content">Select Plan</span>
-              &rarr;</a
+              ><span class="pricing__select-bn-content">Select Plan</span><span class="pricing__select-bn-arrow">&rarr;</span>
+              </a
             >
           </div>
         </article>
@@ -112,8 +112,10 @@
           ></use>
         </svg>
       </button>
-      <div>
-        <ul></ul>
+      <div class="pricing__under-circles">
+        <div class="pricing__under-circle"></div>
+        <div class="pricing__under-circle"></div>
+        <div class="pricing__under-circle"></div>
       </div>
     </div>
   </div>
