--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -20,6 +20,10 @@
                 <p><b>Contacts</b> +1 (234) 567 89 00
                     healthypet@email.com</p>
             </div>
+            <div class="contacts_clock">
+
+            </div>
+            
             <div class="contacts__container">
                 <div class="contacts__map">
                     <iframe
