--- a/header.partial.html
+++ b/header.partial.html
@@ -1,11 +1,11 @@
 
-<header class="container-lg row justify-content-lg-center ">
+<header class="container-lg row justify-content-lg-center" onclick="soundClick()">
     <nav class="navbar navbar-expand-md navbar-light justify-content-lg-center col-lg-12 col-md-12">
         <nav class="navbar navbar-expand-md navbar-light justify-content-center col-12">
             <a class="navbar-brand " href="index.html"> <img class="" src="img/header_logo.webp" width="140"
                                                     height="35"
                                                     alt="logo"></a>
-            <a class="navbar-brand pl-5 text-info" href="https://2024js.github.io/vetesite2/">OUR FRIENDS!<img class="w-100 " src="img/our-friends.svg" width="20"
+            <a onclick="soundClick()" class="navbar-brand pl-5 randomColorText" href="https://2024js.github.io/vetesite2/">OUR FRIENDS!<img class="w-100 " src="img/our-friends.svg" width="20"
                                                                              height="20"
                                                                              alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -13,6 +13,7 @@
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!--<button onclick="soundClick()">Play</button>-->
 
             <div class="collapse navbar-collapse  mx-auto" id="navbarSupportedContent">
 
@@ -33,8 +34,6 @@
                         <a class="nav-link" href="#">Contact us</a>
                     </li>
                 </ul>
-
-
 
 
                 <form class="form-inline my-2 my-lg-0">
