додав рандомний лічильник в about us

--- a/index.about-us.partial.html
+++ b/index.about-us.partial.html
@@ -1,7 +1,8 @@
 <section class="about-us">
     <h2 class="title">About Us</h2>
     <p class="intro">We Do Our Best to Keep Your Pets Healthy</p>
-    <p class="description">Our veterinary clinic has been operating for over 20 years. We have successfully cured thousands of pets, from dogs and cats to exotic pets such as parrots, monkeys, etc.</p>
+    <p class="description">Our veterinary clinic has been operating for over 20 years. We have successfully cured
+        thousands of pets, from dogs and cats to exotic pets such as parrots, monkeys, etc.</p>
     <ul class="services-list">
         <li class="service-item">Ratologists, felinologists, cynologists, and other specialists;</li>
         <li class="service-item">All necessary examinations in one comfortable place;</li>
@@ -9,6 +10,9 @@
     </ul>
     <a href="#" class="btn pricing-link">See Pricing</a>
     <div class="staff-image">
-        <img src="https://res2.weblium.site/res/5f66341807730000225f82ac/5f682a08d7f83a0021b6d54d_optimized_951_c951x837-0x0.webp" alt="Our Staff">
+        <img src="https://res2.weblium.site/res/5f66341807730000225f82ac/5f682a08d7f83a0021b6d54d_optimized_951_c951x837-0x0.webp"
+            alt="Our Staff">
     </div>
+    <div id="employeeCounterDisplay">We have <span id="workerCount">...</span> workers.</div>
+    <script src="js/workers-counter.js"></script>
 </section>
