--- a/index.pricing.partial.html
+++ b/index.pricing.partial.html
@@ -1,4 +1,4 @@
-<section class="pricing container">
+<section class="pricing container-custom">
   <div class="pricing__content">
     <div class="pricing__info">
       <h2 class="pricing__title">&#8212; Pricing</h2>
