--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -1,5 +1,5 @@
 <section class="contacts">
-    <div class="contacts__commonbox">
+    <div class="contacts__commonbox container-lg col-lg-8">
         <div class="contacts__information">
             <div>
                 <h2 class="contacts__title">-Contacts</h2>
