--- a/header.partial.html
+++ b/header.partial.html
@@ -12,7 +12,7 @@
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <button onclick="soundClick()">Play</button>
+            <button class="btn btn-primary" onclick="soundClick()">Play</button>
 
             <div class="collapse navbar-collapse  mx-auto" id="navbarSupportedContent">
 
