--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -1,6 +1,6 @@
 <section class="contacts">
-    <div class="contacts__commonbox container-lg col-lg-8">
-        <div class="contacts__information">
+    <div class="contacts__commonbox container-lg col-lg-8 d-flex flex-column flex-lg-row">
+        <div class="contacts__information col-12 col-lg-7">
             <div>
                 <h2 class="contacts__title">-Contacts</h2>
             </div>
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="col-12 col-lg-5">
             <div class="contacts__form-box">
                 <form class="contacts__form" action="https://formspree.io/f/mleqeqap" method="post">
                     <input class="contacts__form-box-name" type="text" name="full-name"
