--- a/discoveries.html
+++ b/discoveries.html
@@ -74,7 +74,7 @@
         </p>
         <p>Devor agrees that more work needs to be done. "Right now, we just place the organoid and then cross our
             fingers and say, 'Okay, let's just hope for the best,'" she says, "Some connectivity gets formed, but
-            it's not clear to understand how." She adds that because the organoids are being added to mature brain
+            it's not clear to understand how." She adds that because the organoids are being added too mature brain
             tissue, the growth factors that would normally stimulate brain development are mostly gone. This means
             scientists need to find a way to add them synthetically in so that the organoid's growth will match that
             of its host brain.</p>
