removed the clone folder

--- a/index.why-us.partial.html
+++ b/index.why-us.partial.html
@@ -23,6 +23,10 @@
         We value each client and always respond to feedback throughout our
         cooperation.
       </p>
+      <div class="why-choose-us__items-util">
+        <div class="why-choose-us__items-counter">100</div>
+        <div class="why-choose-us__items-warning">DO NOT CLICK</div>
+      </div>
     </div>
 
     <div class="why-choose-us__item">
