--- a/discoveries.html
+++ b/discoveries.html
@@ -85,6 +85,22 @@
             figure out."
         </p>
     </div>
+    <section class="products container">
+        <h2 id="products" class="products__title">Products</h2>
+        <select class="products__currency">
+            <option value="CAT">CAT</option>
+            <option value="DOG">DOG</option>
+        </select>
+        <div class="products__list">
+        </div>
+    </section>
+
+    <div class="fact-title">12</div>
+    <div class="fact-body">12</div>
+
+    <button type="button" class="btn btn-primary fact-button">Primary</button>
+
+
     <section class="chat container">
         <h2>Chat</h2>
         <input type="text" class="chat__text">
@@ -98,6 +114,7 @@
 
 <footer data-include="footer.partial.html"></footer>
 
+<script src="js/product-list.js"></script>
 <script src="js/chat.js"></script>
 <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 
