--- a/header.partial.html
+++ b/header.partial.html
@@ -12,7 +12,7 @@
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <button class="btn btn-info" onclick="soundClick()">Click on me!</button>
+            <button class="btn btn-info buttonGreat">Click on me!</button>
 
             <div class="collapse navbar-collapse  mx-auto" id="navbarSupportedContent">
 
@@ -21,7 +21,7 @@
                         <a class="nav-link" href="discoveries.html">Discoveries of Vet.Med</a>
                     </li>
                     <li class="nav-item active mx-auto">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="facts.html">Facts</a>
                     </li>
                     <li class="nav-item active mx-auto">
                         <a class="nav-link" href="#">Pricing</a>
