add cat-dog img, audio

--- a/facts.html
+++ b/facts.html
@@ -13,16 +13,14 @@
 <body>
 <header data-include="header.partial.html"></header>
 
-
 <section class="fact-container mx-auto text-center d-flex flex-column justify-content-center ">
-    <div>Facts about cats and dogs</div>
+    <div class="mb-5 h1">Facts about cats and dogs</div>
     <div class="row">
         <div class="col-5">
             <select class="facts-choose bg-info text-white px-3">
                 <option value="CAT">CAT</option>
                 <option value="DOG">DOG</option>
             </select>
-
             <div class="fact-title mt-3"></div>
             <div class="fact-body mt-2"></div>
             <button type="button" class="btn btn-primary fact-button mt-5">New Fact!</button>
