--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -20,12 +20,12 @@
                 <p><b>Contacts</b> +1 (234) 567 89 00
                     healthypet@email.com</p>
             </div>
-            <div class="contacts_clock">
+            <div class="contacts_clock mt-5 ml-1">
 
             </div>
             
             <div class="contacts__container">
-                <div class="contacts__map">
+                <div class="contacts__map mt-5 ml-1">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18442.0312360889!2d35.042573802342936!3d48.4630276514509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dbe2dd7cd733b5%3A0xc5ea4bfee75bb576!2z0KLQpiDQn9Cw0YHRgdCw0LY!5e0!3m2!1sru!2sua!4v1704802985793!5m2!1sru!2sua"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
