--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -1,50 +1,39 @@
 
-<div class="carousel">
-  <div class="carousel__track-container">
-    <ul class="carousel__track">
-      <li class="carousel__slide pet grooming">
-        <img src="img/pet grooming.jpg" alt="pet grooming" class="carousel__image">
-        <h3>Pet Grooming</h3>
-        <p>Our groomers will make your pet the most beautiful. Grooming in our clinic is absolutely safe and comfortable
-          for your pet.</p>
-        <span style="font-weight:bold">Read More ➞</span>
-      </li>
-      <li class="carousel__slide pet vaccination">
-        <img src="img/pet vaccination.jpg" alt="pet vaccination" class="carousel__image">
-        <h3>Pet Vaccination</h3>
-        <p>Our veterinary clinic offers vaccinations for your pets. We use only certified vaccines and check the
-          allergic reaction. </p>
-        <span style="font-weight:bold">Read More ➞</span>
-      </li>
-      <li class="carousel__slide surgeries&dental">
-        <img src="img/surgeries dental care.jpg" alt="surgeries dental care" class="carousel__image">
-        <h3>Surgeries & Dental Care</h3>
-        <p>Our surgeons and dentists will perform all the necessary procedures and interventions to restore the health
-          of your pet.</p>
-        <span style="font-weight:bold">Read More ➞</span>
-      </li>
-      <li class="carousel__slide pet adoptation">
-        <img src="img/pet adoptation.jpg" alt="pet adoptation" class="carousel__image">
-        <h3>Pet Adoption</h3>
-        <p>If you want to adopt a pet, our veterinary clinic will help you determine its condition. We also can help
-          with choosing a pet.</p>
-        <span style="font-weight:bold">Read More ➞</span>
-      </li>
-      <li class="carousel__slide pet sitting">
-        <img src="img/pet sitting.jpg" alt="pet sitting" class="carousel__image">
-        <h3>Pet Sitting</h3>
-        <p>If you want to adopt a pet, our veterinary clinic will help you determine its condition. We also can help
-          with choosing a pet. </p>
-        <span style="font-weight:bold">Read More ➞</span>
-      </li>
-      <li class="carousel__slide microchipping">
-        <img src="img/microchipping.jpg" alt="microchipping" class="carousel__image">
-        <h3>Microchipping</h3>
-        <p>The chip contains a unique code with important information. If your pet is lost, it will be easy to return it
-          to you.</p>
-        <span style="font-weight:bold">Read More ➞</span>
-      </li>
-    </ul>
+<div id="carouselservice" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="Pet Vaccination" data-slide-to="0" class="active"></li>
+    <li data-target="Pet Grooming" data-slide-to="1"></li>
+    <li data-target="Surgeries & Dental Care" data-slide-to="2"></li>
+    <li data-target="Pet Adoption" data-slide-to="3"></li>
+    <li data-target="Microchipping" data-slide-to="4"></li>
+    <li data-target="Pet Sitting" data-slide-to="5"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/pet grooming.jpg" class="d-block w-100" alt="Pet Grooming">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Pet Grooming</h5>
+        <p>Our groomers will make your pet the most beautiful. Grooming in our clinic is absolutely safe and comfortable for your pet.</p>
+      </div>
+    </div>
+    <!-- Repeat for each item -->
+    <div class="carousel-item">
+      <img src="img/pet vaccination.jpg" class="d-block w-100" alt="Pet Vaccination">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Pet Vaccination</h5>
+        <p>Our veterinary clinic offers vaccinations for your pets. We use only certified vaccines and check the allergic reaction.</p>
+      </div>
+    </div>
+    <!-- ... Other items ... -->
   </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
     
