--- a/facts.html
+++ b/facts.html
@@ -15,18 +15,18 @@
 
 <section class="fact-container mx-auto text-center d-flex flex-column justify-content-center ">
     <div class="mb-5 h1">Facts about cats and dogs</div>
-    <div class="row">
-        <div class="col-5">
-            <select class="facts-choose bg-info text-white px-3">
+    <div class="row d-flex flex-column flex-lg-row">
+        <div class="col-lg-6">
+            <div ><select class="facts-choose bg-info text-white px-3 ">
                 <option value="CAT">CAT</option>
                 <option value="DOG">DOG</option>
-            </select>
+            </select></div>
+            <button type="button" class="btn btn-primary fact-button mt-5 ">New Fact!</button>
             <div class="fact-title mt-3"></div>
             <div class="fact-body mt-2"></div>
-            <button type="button" class="btn btn-primary fact-button mt-5">New Fact!</button>
         </div>
-        <div class="col-7">
-            <div class="d-flex"><img src="img/fact-img-pocemon.png" alt="img" class="img-from-facts"></div>
+        <div class="col-lg-6">
+            <div class=""><img src="img/fact-img-pocemon.png" alt="img" class="img-thumbnail img-from-facts"></div>
         </div>
     </div>
 
