--- a/facts.html
+++ b/facts.html
@@ -35,6 +35,7 @@
 <footer data-include="footer.partial.html"></footer>
 
 <script src="js/cat-dog-facts.js"></script>
+<script src="js/index.js"></script>
 
 <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 
