add appointment navigation js

--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -1,4 +1,4 @@
-<section class="contacts">
+<section id="contact-section" class="contacts">
     <div class="contacts__commonbox container-lg col-lg-8 d-flex flex-column flex-lg-row">
         <div class="contacts__information col-12 col-lg-7">
             <div>
