--- a/banner.partial.dog-about-us.html
+++ b/banner.partial.dog-about-us.html
@@ -1,15 +1,15 @@
 <section class="banner__nav">
     <div class="banner">
         <div class="banner__text">
-        <p class="banner__paragraph">-Hello, We're Healthy Pet</p>
-        <h2 class="banner__secondblock--heading">We take care of<br>Your Pets as if They<br>Where Our Own.</h2>
-        <p class="banner__secondblock--secondparagraph">Welcome to our veterinary clinic in<br> New York. We will make sure that your<br> pet is always healthy and cheerful.</p>  
-        <button id="btn-1" class="button__banner--pagedown" type="button__banner--pagedown">
-            Make Appointment >
-        </button>
-        <a href="#" class="button__banner--tel" type="button__banner--tel">
-            +1 (234) 567 89 00
-        </a>
+            <p class="banner__paragraph">-Hello, We're Healthy Pet</p>
+            <h2 class="banner__secondblock--heading">We take care of<br>Your Pets as if They<br>Where Our Own.</h2>
+            <p class="banner__secondblock--secondparagraph">Welcome to our veterinary clinic in<br> New York. We will make sure that your<br> pet is always healthy and cheerful.</p>
+            <button id="appointment-btn" class="button__banner--pagedown" type="button__banner--pagedown">
+                Make Appointment >
+            </button>
+            <a href="#" class="button__banner--tel" type="button__banner--tel">
+                +1 (234) 567 89 00
+            </a>
         </div>
     </div>
 </section>
