--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </main>
 <footer data-include="footer.partial.html"></footer>
 <script src="js/index.js"></script>
-<script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
+<script src="js/partners-carousel.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
