--- a/header.partial.html
+++ b/header.partial.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="facts.html">Facts</a>
                     </li>
                     <li class="nav-item active mx-auto">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="react-test-page.html">React</a>
                     </li>
                     <li class="nav-item active mx-auto">
                         <a class="nav-link" href="#">Testimonials</a>
