--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -30,7 +30,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="contacts_clock mt-5 ml-1">
+                <div class="contacts_clock">
 
                 </div>
 
