--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -54,11 +54,11 @@
   </div>
 </div>
 </div>
-  <a class="carousel-control-prev" href="carousel" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="carousel" role="button" data-slide="next">
+  <a class="carousel-control-next" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
