--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -32,8 +32,7 @@
       <li class="carousel__slide pet sitting">
         <img src="img/daycare.gif" alt="Pet Sitting" class="carousel__image">
         <h3>Pet Sitting</h3>
-        <p>If you want to adopt a pet, our veterinary clinic will help you determine its condition. We also can help
-          with choosing a pet. </p>
+        <p>If you need someone to look after your pet when you`re away, our specialists will be happy to do it. </p>
         <span style="font-weight:bold">Read More ➞</span>
       </li>
       <li class="carousel__slide microchipping">
