--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -45,11 +45,8 @@
     </ul>
   </div>
 
-  
+  <button class="carousel__button carousel__button--left" type="button">←</button>
+  <button class="carousel__button carousel__button--right" type="button">→</button>
 
-  <div class="carousel__nav">
-    <button class="carousel__indicator carousel__indicator--active" type="button" data-slide-to="0"></button>
-    <button class="carousel__indicator" type="button" data-slide-to="1"></button>
-    <button class="carousel__indicator" type="button" data-slide-to="2"></button>
-  </div>
+ 
 </div>
