js + html fixed(problem w/ id)

--- a/footer.partial.html
+++ b/footer.partial.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer id="contact-section" class="footer">
   <div class='btn-scroll-up'>
         <span>&#9650;</span>
         <span>UP</span>
