"sdelai nas edinin" done

--- a/header.partial.html
+++ b/header.partial.html
@@ -1,6 +1,6 @@
 <header class="container-lg row justify-content-lg-center">
-    <nav class="navbar navbar-expand-md navbar-light justify-content-lg-center col-lg-12 col-md-12">
-        <nav class="navbar navbar-expand-md navbar-light justify-content-center col-12">
+    <nav class="navbar navbar-expand-lg navbar-light justify-content-lg-center col-lg-12 col-md-12">
+        <nav class="navbar navbar-expand-lg navbar-light justify-content-center col-12">
             <a class="navbar-brand " href="index.html"> <img class="" src="img/header_logo.webp" width="140"
                                                     height="35"
                                                     alt="logo"></a>
@@ -12,7 +12,7 @@
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <button class="btn btn-info buttonGreat">Click on me!</button>
+            <!--<button class="btn btn-info buttonGreat">Click on me!</button>-->
 
             <div class="collapse navbar-collapse  mx-auto" id="navbarSupportedContent">
 
