"sdelai nas edinin" done

--- a/header.partial.html
+++ b/header.partial.html
@@ -1,10 +1,10 @@
 <header class="container-lg row justify-content-lg-center">
-    <nav class="navbar navbar-expand-lg navbar-light justify-content-lg-center col-lg-12 col-md-12">
-        <nav class="navbar navbar-expand-lg navbar-light justify-content-center col-12">
+    <nav class="navbar navbar-expand-lg navbar-light justify-content-lg-center col-md-12">
+        <nav class="navbar navbar-expand-lg navbar-light justify-content-center col-12 ml-1">
             <a class="navbar-brand " href="index.html"> <img class="" src="img/header_logo.webp" width="140"
                                                     height="35"
                                                     alt="logo"></a>
-            <a class="navbar-brand pl-5 randomColorText" href="https://2024js.github.io/vetesite2/">OUR FRIENDS!<img class="w-100 " src="img/our-friends.svg" width="20"
+            <a class="navbar-brand pl-3 randomColorText" href="https://2024js.github.io/vetesite2/">OUR FRIENDS!<img class="w-100 " src="img/our-friends.svg" width="20"
                                                                              height="20"
                                                                              alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
